<resources>
    <string name="app_name">Dormum</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">mki0fEP4uiv0FqdslWE21KInrWtgi3y7WQUy3WEP</string>
    <string name="back4app_client_key">7AMDNCVe6LoCxly414LWMXR0NVjobxi8TPNozZKb</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="notificacao">Notificações</string>
    <string name="messagem">Mensagens</string>
    <string name="adicionar">Adicionar</string>
    <string name="procurar">Pesquisar</string>
    <string name="menu">Menu</string>
    <string name="logout">Sair</string>
    <string name="inicio">Início</string>
    <string name="descobrir">Descobrir</string>
    <string name="atividade">Atividade</string>
    <string name="msgVeja">Veja o que está acontecendo no Twitter</string>
    <string name="acontecendo">O que está acontecendo?</string>
    <string name="txt_mourinho" translatable="false">Mourinho on Mata and #MUFC</string>
    <string name="qtd_tweets">23.4M Tweets</string>
    <string name="btn_related">Ver Tweets relacionados</string>
    <string name="name_brieravil" translatable="false">Brier Avil</string>
    <string name="name_dylan" translatable="false">Dylan Byrd</string>
    <string name="user_brier" translatable="false">\@BrierAvil</string>
    <string name="tmp_1min" translatable="false">1m</string>
    <string name="txt_brier" translatable="false">All these tweets about gmail and macs are suffocating me...someone tweet about their sandwich or something, plz.</string>
    <string name="user_dylan" translatable="false">\@byrdinflight</string>
    <string name="tmp_1h" translatable="false">1h</string>
    <string name="txt_dylan" translatable="false">Does @ThisGuy know it\'s National Hug</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_teste">teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
